tests/baselines/reference/parserIndexMemberDeclaration10(strict=true).errors.txt
parserIndexMemberDeclaration10.ts(2,11): error TS1434: Unexpected keyword or identifier.
parserIndexMemberDeclaration10.ts(2,11): error TS7008: Member 'static' implicitly has an 'any' type.


==== parserIndexMemberDeclaration10.ts (2 errors) ====
    class C {
       static static [x: string]: string;
              ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
              ~~~~~~
!!! error TS7008: Member 'static' implicitly has an 'any' type.
    }